Fix kbd background in dark mode

--- a/styles-dark.scss
+++ b/styles-dark.scss
@@ -8,3 +8,7 @@ $font-family-serif: "Atkinson Hyperlegible", sans-serif;
 $primary: #2c2c2c;
 
 /*-- scss:rules --*/
+
+kbd, .kbd{
+  background-color: #222222;
+}
